<resources>
    <string name="app_name">To do list project</string>
    <string name="list_alert_title">Delete</string>
    <string name="list_alert_message">Do you want to delete this item from list?</string>
    <string name="button_text_positive">Yes</string>
    <string name="button_text_negative">No</string>
    <string name="edit_text_new_item_hint">Add new item</string>
    <string name="button_add_text">Add</string>
    <string name="file_not_found_toast_message">File not found</string>
    <string name="button_text_show_deleted_show">Pokaż usunięte</string>
    <string name="button_text_show_deleted_hide">Ukryj usunięte</string>
    <string name="button_azsort_text">A-Z</string>
    <string name="button_datesort_text">Data</string>
</resources>
